# lotide

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  README.md  test.lot
.ccls-cache/@@home@duckonomy@Development@Lotide@lotide/: @usr@include@alloca.h.blob  @usr@include@alsa@asoundef.h.blob  @usr@include@alsa@asoundlib.h.blob  @usr@include@alsa@conf.h.blob  @usr@include@alsa@control.h.blob  @usr@include@alsa@error.h.blob  @usr@include@alsa@global.h.blob  @usr@include@alsa@hwdep.h.blob  @usr@include@alsa@input.h.blob  @usr@include@alsa@mixer.h.blob  @usr@include@alsa@output.h.blob  @usr@include@alsa@pcm.h.blob  @usr@include@alsa@rawmidi.h.blob  @usr@include@alsa@seq.h.blob  @usr@include@alsa@seq_event.h.blob  @usr@include@alsa@seq_midi_event.h.blob  @usr@include@alsa@seqmid.h.blob  @usr@include@alsa@timer.h.blob  @usr@include@alsa@version.h.blob  @usr@include@arpa@inet.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@ioctl.h.blob  @usr@include@asm-generic@ioctls.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@socket.h.blob  @usr@include@asm-generic@sockios.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@errno.h.blob  @usr@include@asm@ioctl.h.blob  @usr@include@asm@ioctls.h.blob  @usr@include@asm@posix_types.h.blob  @usr@include@asm@posix_types_64.h.blob  @usr@include@asm@socket.h.blob  @usr@include@asm@sockios.h.blob  @usr@include@asm@types.h.blob  @usr@include@asm@unistd.h.blob  (+1094 more)
.ccls-cache/@home@duckonomy@Development@Lotide@lotide/: build@CMakeFiles@3.17.1@CompilerIdC@CMakeCCompilerId.c.blob  build@CMakeFiles@3.17.1@CompilerIdCXX@CMakeCXXCompilerId.cpp.blob  build@CMakeFiles@CheckIncludeFiles@HAVE_STDDEF_H.c.blob  build@CMakeFiles@CheckIncludeFiles@HAVE_STDINT_H.c.blob  build@CMakeFiles@CheckIncludeFiles@HAVE_STDLIB_H.c.blob  build@CMakeFiles@CheckIncludeFiles@HAVE_SYSTIME_H.c.blob  build@CMakeFiles@CheckIncludeFiles@HAVE_UNISTD_H.c.blob  build@CMakeFiles@CheckTypeSize@CMAKE_SIZEOF_UNSIGNED_SHORT.c.blob  build@CMakeFiles@CheckTypeSize@INT16_T.c.blob  build@CMakeFiles@CheckTypeSize@INT32_T.c.blob  build@CMakeFiles@CheckTypeSize@INT64_T.c.blob  build@CMakeFiles@CheckTypeSize@INTMAX_T.c.blob  build@CMakeFiles@CheckTypeSize@SIZE_OF_INT.c.blob  build@CMakeFiles@CheckTypeSize@SIZE_OF_LONG.c.blob  build@CMakeFiles@CheckTypeSize@SIZE_OF_LONG_LONG.c.blob  build@CMakeFiles@CheckTypeSize@SIZE_OF_SHORT.c.blob  build@CMakeFiles@CheckTypeSize@SIZE_OF_UNSIGNED.c.blob  build@CMakeFiles@CheckTypeSize@SIZE_OF_UNSIGNED_LONG.c.blob  build@CMakeFiles@CheckTypeSize@SIZE_OF_UNSIGNED_LONG_LONG.c.blob  build@CMakeFiles@CheckTypeSize@SIZE_OF_UNSIGNED_SHORT.c.blob  build@CMakeFiles@CheckTypeSize@SIZE_T.c.blob  build@CMakeFiles@CheckTypeSize@SSIZE_T.c.blob  build@CMakeFiles@CheckTypeSize@UINT16_T.c.blob  build@CMakeFiles@CheckTypeSize@UINT32_T.c.blob  build@CMakeFiles@CheckTypeSize@UINT64_T.c.blob  build@CMakeFiles@CheckTypeSize@UINT8_T.c.blob  build@CMakeFiles@CheckTypeSize@UINTMAX_T.c.blob  build@CMakeFiles@CheckTypeSize@UNSIGNED___INT64.c.blob  build@CMakeFiles@CheckTypeSize@__INT64.c.blob  build@CMakeFiles@FindOpenMP@OpenMPCheckVersion.c.blob  build@CMakeFiles@FindOpenMP@OpenMPCheckVersion.cpp.blob  build@CMakeFiles@FindOpenMP@OpenMPTryFlag.c.blob  build@CMakeFiles@FindOpenMP@OpenMPTryFlag.cpp.blob  extern@TSAL@examples@bubble_sort.cpp.blob  extern@TSAL@examples@canon.cpp.blob  extern@TSAL@examples@chord.cpp.blob  extern@TSAL@examples@chord_p.cpp.blob  extern@TSAL@examples@hello_tsal.cpp.blob  extern@TSAL@examples@hello_tsal_threads.cpp.blob  extern@TSAL@examples@insertion_sort.cpp.blob  (+730 more)
.cquery_cached_index/@@home@duckonomy/: @usr@include@Delay.hpp.json  @usr@include@Util.hpp.json  @usr@include@X11@X.h.json  @usr@include@X11@Xarch.h.json  @usr@include@X11@Xatom.h.json  @usr@include@X11@Xfuncproto.h.json  @usr@include@X11@Xfuncs.h.json  @usr@include@X11@Xlib.h.json  @usr@include@X11@XlibConf.h.json  @usr@include@X11@Xlibint.h.json  @usr@include@X11@Xmd.h.json  @usr@include@X11@Xos.h.json  @usr@include@X11@Xosdefs.h.json  @usr@include@X11@Xproto.h.json  @usr@include@X11@Xprotostr.h.json  @usr@include@X11@Xresource.h.json  @usr@include@alloca.h.json  @usr@include@alsa@asoundef.h.json  @usr@include@alsa@asoundlib.h.json  @usr@include@alsa@conf.h.json  @usr@include@alsa@control.h.json  @usr@include@alsa@error.h.json  @usr@include@alsa@global.h.json  @usr@include@alsa@hwdep.h.json  @usr@include@alsa@input.h.json  @usr@include@ares.h.json  (+815 more)
include/: Group.hpp  LTSynth.hpp  LoTide.hpp  LoTideCli.hpp  LoTideServer.hpp  Note.hpp  Phrase.hpp  Sequencer.hpp  Server.hpp  Song.hpp
protos/: lotiderpc.proto
src/: CMakeLists.sublime-project  CMakeLists.sublime-workspace  CMakeLists.txt  Group.cpp  LTSynth.cpp  LoTide.cpp  LoTideCli.cpp  LoTideServer.cpp  Note.cpp  Phrase.cpp  Sequencer.cpp  Server.cpp  Song.cpp  main.cpp
tests/: CMakeLists.txt  testClient.cpp  testServer.cpp
(+5496 files in other folders)
